Update syntax highlighting

--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
         }, {
             "scopeName": "markdown.rush.codeblock",
             "path": "./syntaxes/markdown.tmLanguage.json",
-            "injectTo": [
-                "text.html.markdown"
-            ],
+            "injectTo": [ "text.html.markdown" ],
             "embeddedLanguages": {
                 "meta.embedded.block.rush": "rush"
             }
