--- a/language-configuration.json
+++ b/language-configuration.json
@@ -16,15 +16,54 @@
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
+        ["'", "'"],
+        ["\"", "\""]
     ],
     // symbols that can be used to surround a selection
     "surroundingPairs": [
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
+        ["<", ">"],
+        ["'", "'"],
+        ["\"", "\""]
+    ],
+
+    "autoCloseBefore": "\"' \n\t",
+    "folding": {
+        "offSide": true
+    },
+
+    "onEnterRules": [
+        {
+            "beforeText": "^\\s*(public|private|protected|internal)\\s*:?\\s*$",
+            "action": {
+                "indent": "indent"
+            }
+        },
+        {
+            "beforeText": "(?<![_[:alnum:]])(operator|func|get|set)(?![_[:alnum:]])(?!.*=>)",
+            "action": {
+                "indent": "indent"
+            }
+        },
+        {
+            "beforeText": "(?<![_[:alnum:]])(class|struct|record|interface|implements)(?![_[:alnum:]])",
+            "action": {
+                "indent": "indent"
+            }
+        },
+        {
+            "beforeText": "^\\s*(?<![_[:alnum:]])(if|else|while|for|try|finally)(?![_[:alnum:]]).*:\\s*$",
+            "action": {
+                "indent": "indent"
+            }
+        },
+        {
+            "beforeText": "([_a-zA-Z\\)\\}\\]])\\s*=>\\s*$",
+            "action": {
+                "indent": "indent"
+            }
+        }
     ]
 }
