--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "preview": true,
     "publisher": "rush-lang",
     "displayName": "Rush",
-    "description": "Rush for Visual Studio Code",
+    "description": "Rush Programming Language Support for Visual Studio Code",
     "version": "0.0.1",
     "license": "MIT",
     "icon": "icon.png",
     "scripts": {
-        "package": "vsce package -o ./out/rush-0.0.1.vsix",
-        "install-dev-extension": "npm run package && code --install-extension ./out/rush-0.0.1.vsix"
+        "package": "vsce package -o ./rush-0.0.1.vsix",
+        "install-dev-extension": "npm run package && code --install-extension ./rush-0.0.1.vsix"
     },
     "repository": {
         "type": "git",
@@ -40,12 +40,16 @@
             "aliases": ["Rush", "rush"],
             "extensions": [".rush"],
             "configuration": "./language-configuration.json"
+        }, {
+            "id": "rush.markdown",
+            "aliases": ["Markdown", "markdown"]
         }],
         "grammars": [{
             "language": "rush",
             "scopeName": "source.rush",
             "path": "./syntaxes/rush.tmLanguage.json"
         }, {
+            "language": "rush.markdown",
             "scopeName": "markdown.rush.codeblock",
             "path": "./syntaxes/markdown.tmLanguage.json",
             "injectTo": [ "text.html.markdown" ],
