--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,62 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+defaults: &defaults
+  working_directory: ~/repo
+  docker:
+    - image: cimg/node:18.8
+
+parameters:
+  pull_request:
+    type: boolean
+    default: false
+
 jobs:
-  build:
-    working_directory: ~/vscode-rush
-    docker:
-      - image: node:16-buster
+  test:
+    <<: *defaults
     steps:
       - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run: npm ci
       - run:
-        name: "Install dependencies"
-        command: |
-          npm ci
-          npm version $major.$minor.$patch
-      - run:
-        name: "Building Extension"
-        command: |
-          npm run build
-      - run:
-        name: "Executing Unit Tests"
-        command: |
-          npm run test
-      - run:
-        name: "Packaging Extension"
-        command: |
-          mkdir -p ~/vscode-rush/dist &&
-          vsce package -o ~/vscode-rush/dist
-      - run:
-        name: "Publishing Extension"
-        command: |
-          vsce publish
+          name: Run Tests
+          command: npm test
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - persist_to_workspace:
+          root: ~/repo
+          paths: .
 
+  publish:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - run: npm publish
 
+workflows:
+  check-pull-request:
+    jobs:
+      - test
+
+  test-deploy:
+    jobs:
+      - test:
+          filters:
+            branches:
+              only:
+                - master
+      - publish:
+          requires:
+            - test
+          filters:
+            branches:
+              only:
+                - master
 
