--- a/language-configuration.json
+++ b/language-configuration.json
@@ -20,6 +20,7 @@
       { "open": "'", "close": "'", "notIn": [ "string", "comment" ] },
       { "open": "\"", "close": "\"", "notIn": [ "string" ] },
       { "open": "\"\"\"", "close": "\"\"\"", "notIn": [ "comment" ] },
+      { "open": "###", "close": "###", "notIn": [ "string" ] }
    ],
    "surroundingPairs": [
       ["{", "}"],
