--- a/package.json
+++ b/package.json
@@ -58,6 +58,13 @@
         }
       ],
       [
+        "@semantic-release/git",
+        {
+            "assets": ["CHANGELOG.md"],
+            "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ],
+      [
         "semantic-release-vsce",
         {
           "packageVsix": true
@@ -157,6 +164,7 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.4",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/glob": "^7.1.4",
